--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -1,38 +1,351 @@
-.App {
+/*  ===== MOBILE styles (reside at the top and are inherited by all devices) ===== */
+/*  ===== See tablet, desktop, and print @media queries at the bottom. */
+
+
+/*   ----- Imports  -----  */
+          /* Add fonts from the app's server 
+@font-face {                
+  font-family: 'FontName';
+  src: url('FontName.woff2') format('woff2');
+} 
+          */                           
+
+          /* ...or hosted services like Google Fonts 
+@import url(//fonts.googleapis.com/css?family=Font+Name);
+          */
+
+          @import '../node_modules/modern-normalize/modern-normalize.css';
+          /* npm install modern-normalize 
+            Resets elements for browser consistancy.  
+            http://nicolasgallagher.com/about-normalize-css/ 
+          */
+
+          /* Component-specific stylesheets, if any 
+@import "component1.css";   
+          */
+
+/*   ----- Variables  -----  */
+:root {
+  --beaver-orange: #D73F09;
+  --bucktooth-white: #FFFFFF;
+  --coastline-65: #A7ACA2;
+  --coastline-80: #cccfc9;
+  --coastline-85: #d9dbd6;
+  --crater-50: #81837c;
+  --crater-55: #8E9089;
+  --crater-75: #c0c1bd;
+  --crater-70: #b3b5b0;
+  --moondust: #c6DAE7;
+  --paddletail-black: #000000;
+  --reindeer-moss: #C4D6A4;
+  --solar-flare: #d3832B;
+  --star-canvas-18: #003B5C;
+  --star-canvas-30: #006199;
+}
+
+/*  ----- Viewport ----- elements inherited by all remaining elements ----- */
+body {       /* Can alternatively define in html {} or :root {} */
+  color:black;
+  background-color:transparent;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:1em;
+  margin: 0px;
+  padding: 0px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body .App {
+  position:relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* ----- Anchors ----- Text links */
+a {}
+a:link {}
+a:hover {}
+a:active {}
+a:visited {}
+
+/*  ----- Navigation ----- Override text links for navigation only.  */
+nav {
+  margin:10px;
+}
+nav a {
+  display: inline-block;
+  padding: 15px 20px;
+  font-size: 1.2em;
+  font-weight:500;
+  margin: 10px 5px 0 5px;
+  border:none;
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: var(--star-canvas-18);
+  color:var(--bucktooth-white);
+  vertical-align: middle;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav a:hover {
+  display: inline-block;
+  padding: 15px 20px;
+  font-size: 1.2em;
+  font-weight:500;
+  border:none;
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: var(--star-canvas-30);
+  color:var(--bucktooth-white);
+  vertical-align: middle;
+}
+
+/*  ----- Page layout blocks -----  */
+header {
+  background-color: transparent;
+  color: inherit;
+  border:none;
+  font-size:1em;
+  font-weight: 400;
+  margin:0px;
+  padding:0px;
+}
+header .motivational-quote {
+  font-style: italic;
+  background-color: var(--reindeer-moss);
+  font-size: 1.15em;
+  margin: 0 auto;
+  width:100%;
+  padding:10px;
+}
+main {
+  background-color: transparent;
+  color:black;
+  border:none;
+  padding: 0 0 50px 0;
+}
+section {}
+  article {}
+    #topic1 {}
+    #topic2 {}
+    #gallery1 {}
+    #gallery2 {}
+div {}
+aside {}
+footer {
+  background-color: var(--paddletail-black);
+  color: var(--bucktooth-white);
+  border:none;
+  font-size:inherit;
+  font-weight: 500;
+  margin:0px;
+  padding:0px;
+  position:absolute;
+  left:0;
+  bottom:0;
+  width:100%;
+  height:50px;
+}
+
+/*  -----  Typography  ----- */
+p {
+  margin-bottom:0px;
+}
+br {}
+ol, ul, dl {}
+li {}
+dt {}
+dd {}
+
+h1, h2, h3, h4, h5, h6 {} /* Define consistant font family.*/
+h1 {
+  margin:0px;
+  background-color: var(--beaver-orange);
+  color:var(--bucktooth-white);
+  padding:15px;
+}
+h2 {}
+h3 {}
+h4 {}
+h5 {}
+h6 {}
+
+abbr {}
+acronym {}
+address {}
+blockquote {}
+  q {}
+  cite {}
+em {}
+hr {}
+mark {}
+s {}
+span {}
+strong {}
+sub {}
+sup {}
+time {}
+
+/*  ----- Coding or instructional typography ----- */
+pre {}
+code {}
+kbd {}
+samp {}
+var {}
+del {} 
+ins {}
+
+/*  ----- Table ----- */
+table {
+  width:100%;
+  margin: 20px auto;
+  border-collapse:none;
+  border:none;
+  padding:0px;
+}
+table .exercise-date {
+    display: none;
+}
+caption {}
+thead {}
+tbody {}
+tfoot {}
+tr {}
+  tr:nth-child(even) {}
+th {}
+td {
+  background-color: var(--coastline-85);
+  border-radius: 2px;
+  padding: 10px 15px;
+}
+.pencil, .trash-can {
+  cursor:pointer;
+}
+  td:nth-child(1) {}
+colgroup {}
+data {}
+datalist {}
+
+
+/*  ----- Form ----- */
+form {
+  width:100%;
+}
+.form-group {
+  width:100%;
+  text-align: left;
+  margin: 20px 0;
+}
+.form-group label {
+  width:25%;
+  margin-right:10px;
+  display: inline-block;
+}
+.form-group input, .form-group select {
+  padding:.25em;
+  border: 1px solid grey;
+  border-radius: 5px;
+  width:70%;
+}
+fieldset {
+  margin:10px;
+  border:none;
+}
+  legend {}
+label {}
+  button {
+    display: inline-block;
+    padding: 7px 10px;
+    font-size: 1.2em;
+    margin: 10px 5px;
+    border-radius: 5px;
+    border: none;
+    text-decoration: none;
+    background-color: var(--crater-50);
+    color:var(--bucktooth-white);
+    cursor:pointer;
   }
-  to {
-    transform: rotate(360deg);
+  button:hover {
+    background-color: var(--crater-55); 
+  }
+  input {
+    padding:.25em;
+    border: 1px solid grey;
+    border-radius: 5px;
+    width:70%;
+  }
+  output {}
+  meter {}
+  progress {}
+  select {}
+    optgroup {}
+    option {}
+  textarea {}
+
+/* ----- Media ----- */
+figure {}
+  figcaption {}
+img {}
+svg {}
+picture {}
+  source {}
+iframe {}
+video {}
+audio {}
+embed {}
+object {}
+
+
+/*  ----- Classes for alignment, positioning, widths, grids, embellishments, and animation -----  */
+.floatright {}
+.floatleft {}
+.center-middle {}
+
+.ten {}
+.twenty {}
+.thirty {}
+.forty {}
+.fifty {}
+.sixty {}
+.seventy {}
+.eighty {}
+
+.radius {}
+.circle {}
+.boxshadow {}
+.tshadow {} 
+.gradient {}
+.shape {}
+
+@keyframes App-logo {}
+
+/*   ===== TABLET  media query overrides mobile styles ===== */
+@media all and (min-width: 600px) {
+
+  main {
+    max-width: 900px;
+    margin:0 auto;
+  }
+
+  header .motivational-quote {
+    max-width: 500px;
+    margin: 20px auto;
+    border-radius: 5px;
+  }
+
+  form {
+    max-width:400px;
+    margin:0 auto;
+  }
+
+  nav a {
+    margin: 0 5px;
+  }
+
+  table .exercise-date {
+    display:block;
   }
 }
+
+/*   ===== DESKTOP  media query overrides mobile and tablet styles ===== */
+@media all and (min-width: 1080px) {}
+
+/*   ===== PRINT  media query overrides previous styles =====  */
+@media print {}
